--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,247 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+#toggle-heart {
+  align-self: center;
+  position: absolute;
+  color: #888;
+  font-size: 1.4rem;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  padding: 0;
+  outline: none;
+  right: 0px;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  padding-left: 2px;
 }
-a:hover {
-  color: #535bf2;
+
+
+#toggle-heart.liked {
+  color: #e2264d;
+  -webkit-filter: none;
+  filter: none;
+  animation: heart 1s cubic-bezier(0.17, 0.89, 0.32, 1.49);
+}
+
+#toggle-heart.liked:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  margin: -2.25rem;
+  border: solid 2.25rem #e2264d;
+  width: 4.5rem;
+  height: 4.5rem;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  animation: bubble 1s ease-out;
+}
+
+#toggle-heart.liked:after {
+  content: "";
+  position: absolute;
+  margin: -0.1875rem;
+  width: 0.375rem;
+  height: 0.375rem;
+  box-shadow: 0.32476rem -3rem 0 -0.1875rem #ff8080,
+    -0.32476rem -2.625rem 0 -0.1875rem #ffed80,
+    2.54798rem -1.61656rem 0 -0.1875rem #ffed80,
+    1.84982rem -1.89057rem 0 -0.1875rem #a4ff80;
+  animation: sparkles 1s ease-out;
+}
+
+@keyframes heart {
+  0%,
+  17.5% {
+    font-size: 0;
+  }
+}
+
+@keyframes bubble {
+  15% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    border-color: #cc8ef5;
+    border-width: 2.25rem;
+  }
+  30%,
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    border-color: #cc8ef5;
+    border-width: 0;
+  }
+}
+
+@keyframes sparkles {
+  0%,
+  20% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+    box-shadow: 0.32476rem -2.4375rem 0 0rem #ff8080,
+      -0.32476rem -2.0625rem 0 0rem #ffed80,
+      2.1082rem -1.26585rem 0 0rem #ffed80;
+  }
 }
 
 body {
-  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+header {
+  background-color: rgb(23, 23, 23);
+}
+
+.header {
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  height: 53px;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-pages {
+  left: 73px;
+  position: absolute;
+  gap: 34px;
+  display: flex;
+}
+
+.pages-link {
+  text-decoration: none;
+  color: #a1a1a3;
+  font-size: 15px;
+}
+
+.header-info {
+  position: absolute;
+  right: 182px;
+  display: flex;
+  gap: 35px;
+}
+
+.header-search {
+  display: flex;
+  text-decoration: none;
+  color: #a1a1a3;
+  font-size: 15px;
+  justify-content: center;
+}
+.bi{
+  padding-right: 3px;
+}
+
+.header-cart {
+  display: flex;
+  text-decoration: none;
+  color: #a1a1a3;
+  font-size: 15px;
+  justify-content: center;
+}
+
+.container {
+  background-color: black;
+}
+
+.main-text {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding-top: 48px;
+  color: white;
+}
+
+.text-netflix {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+
+.text-current {
+  color: #838383;
+  font-size: 15px;
+}
+
+.films {
+  padding-left: 55px;
   min-height: 100vh;
+  padding-top: 33px;
+  padding-right: 160px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.films-card {
+  position: relative;
+  color: white;
+  background-color: #171717;
+  width: 200px;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
+  transition: transform 0.3s ease;
+  height: 430px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.films-card:hover {
+  transform: scale(1.03);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.films-card > img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.films-info-card {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.film-name {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.movie-rating {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 14px;
+  color: gold;
+}
+
+.movie-rating span:last-child {
+  color: white;
+}
+
+.film-category {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+}
+
+.name-category {
+  font-size: 12px;
+  padding: 4px 8px;
+  background-color: #252525;
+  border-radius: 6px;
+  color: #ccc;
 }
