--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
 }
 
 #toggle-heart {
-  align-self: center;
-  position: absolute;
   color: #888;
   font-size: 1.4rem;
   -webkit-filter: grayscale(1);
@@ -15,13 +13,27 @@
   background: transparent;
   padding: 0;
   outline: none;
-  right: 0px;
-  outline: none;
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 20px;
-  padding-left: 2px;
+  transform-origin: center center;
+  transition: transform 0.3s ease;
 }
 
+.films-card:hover .heart-background,
+.films-card:hover #toggle-heart {
+  transform: scale(1.03);
+}
+
+.heart-background {
+  background-color: rgba(3, 3, 3, 0.621);
+  border-radius: 20px;
+  padding-left: 2px;
+  position: absolute;
+  width: 23px;
+  height: 32px;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 #toggle-heart.liked {
   color: #e2264d;
@@ -66,7 +78,7 @@
   }
 }
 
-@keyframes bubble {
+/* @keyframes bubble {
   15% {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -80,7 +92,7 @@
     border-color: #cc8ef5;
     border-width: 0;
   }
-}
+} */
 
 @keyframes sparkles {
   0%,
@@ -137,7 +149,7 @@ header {
   font-size: 15px;
   justify-content: center;
 }
-.bi{
+.bi {
   padding-right: 3px;
 }
 
@@ -179,10 +191,12 @@ header {
   padding-left: 55px;
   min-height: 100vh;
   padding-top: 33px;
-  padding-right: 160px;
+  padding-right: 4%;
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
+  padding-bottom: 30px;
+  justify-content: center;
 }
 
 .films-card {
@@ -244,4 +258,152 @@ header {
   background-color: #252525;
   border-radius: 6px;
   color: #ccc;
+}
+
+.footer {
+  background-color: rgb(23, 23, 23);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 85px;
+  padding-left: 90px;
+  height: 110px;
+  position: relative;
+}
+
+.footer-center {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-center-text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.center-text {
+  text-decoration: none;
+  color: #a1a1a3;
+  font-size: 15px;
+}
+
+.footer-text {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding-top: 8px;
+  color: white;
+}
+
+.footer-movieapp {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 60px;
+  letter-spacing: 5px;
+}
+
+.footer-info-right {
+  display: flex;
+  gap: 45px;
+}
+
+.footer-pages {
+  text-decoration: none;
+  color: #a1a1a3;
+}
+
+.contact-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.contact-link {
+  color: #a1a1a3;
+  text-decoration: none;
+}
+
+.contact-popup {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%) translateY(10px);
+  background-color: #2c2c2c;
+  color: #fff;
+  padding: 12px 18px;
+  border-radius: 8px;
+  font-size: 14px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  user-select: text;
+  white-space: pre-line;
+  pointer-events: none; /* пока мышка не наведена */
+  width: 230px;
+  z-index: 100;
+}
+
+.contact-wrapper:hover .contact-popup {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(-50%) translateY(0);
+  pointer-events: auto; /* чтобы можно было кликать, копировать текст */
+}
+
+.footer-bottom {
+  text-align: center;
+  color: #777777;
+  font-size: 14px;
+  padding-bottom: 15px;
+  background-color: rgb(23, 23, 23);
+}
+
+.pages-link,
+.footer-pages,
+.header-search,
+.header-cart,
+.contact-link {
+  position: relative;
+  text-decoration: none;
+  color: #a1a1a3;
+  font-size: 15px;
+  overflow: hidden;
+}
+
+.pages-link::after,
+.footer-pages::after,
+.header-search::after,
+.header-cart::after,
+.contact-link::after {
+  content: "";
+  position: absolute;
+  bottom: 0; /* полоска снизу */
+  left: 0;
+  height: 2px;
+  width: 0;
+  background-color: #a1a1a3;
+  transition: all 0.4s ease;
+  transform-origin: left;
+}
+
+.pages-link:hover::after,
+.footer-pages:hover::after,
+.header-search:hover::after,
+.header-cart:hover::after,
+.contact-link:hover::after {
+  width: 100%;
+}
+
+/* Для красивого ухода справа налево */
+.pages-link:not(:hover)::after,
+.footer-pages:not(:hover)::after,
+.contact-link:not(:hover)::after,
+.header-cart:not(:hover)::after,
+.header-search:not(:hover)::after {
+  transform: translateX(100%);
+  width: 0;
+  transition: all 0.4s ease;
 }
