Aligned icon in header

--- a/src/index.css
+++ b/src/index.css
@@ -465,7 +465,7 @@ header {
 
 .user-dropdown-btn {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   gap: 5px;
   background: none;
   border: none;
